--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@angular/compiler-cli": "~12.2.0",
     "@types/jasmine": "~3.8.0",
     "@types/node": "^12.11.1",
+    "angular-cli-ghpages": "^1.0.0-rc.2",
     "bootstrap": "^4.0.0-beta.2",
     "jasmine-core": "~3.8.0",
     "jquery": "^3.6.0",
